<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CurveAppearance</class>
 <widget class="QWidget" name="CurveAppearance">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>408</width>
    <height>181</height>
   </rect>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <widget class="QGroupBox" name="GroupBox9_2_2_2">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="font">
      <font>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="title">
      <string>Appearance</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QLabel" name="_label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
          <width>100</width>
          <height>16</height>
         </size>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Plain</enum>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="1" column="5">
       <widget class="QSpinBox" name="_spinBoxLineWidth">
        <property name="toolTip">
         <string>Line Width</string>
        </property>
        <property name="whatsThis">
         <string>If &quot;Show Lines&quot; is checked, the selected line width.</string>
        </property>
        <property name="maximum">
         <number>50</number>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QCheckBox" name="_showLines">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="whatsThis">
         <string>Check this to cause lines to be drawn between data points.</string>
        </property>
        <property name="text">
         <string>&amp;Lines</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="4" column="0" colspan="2">
       <widget class="QCheckBox" name="_showPoints">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="whatsThis">
         <string>Check this to cause the selected points to be drawn at each data point.</string>
        </property>
        <property name="text">
         <string>Po&amp;ints</string>
        </property>
       </widget>
      </item>
      <item row="7" column="0" colspan="2">
       <widget class="QCheckBox" name="_showHead">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>&amp;Head</string>
        </property>
       </widget>
      </item>
      <item row="4" column="2">
       <widget class="QLabel" name="_textLabelPointStyle">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>&amp;Type:</string>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
        <property name="buddy">
         <cstring>_comboPointSymbol</cstring>
        </property>
        <property name="si" stdset="0">
         <string>points type</string>
        </property>
       </widget>
      </item>
      <item row="4" column="3">
       <widget class="QComboBox" name="_comboPointSymbol">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="toolTip">
         <string>Point Type</string>
        </property>
        <property name="whatsThis">
         <string>If &quot;Show Points&quot; is checked, the selected point type will be drawn at each data point.</string>
        </property>
       </widget>
      </item>
      <item row="4" column="4">
       <widget class="QLabel" name="_textLabelPointDensity">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>&amp;Density:</string>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
        <property name="buddy">
         <cstring>_comboPointDensity</cstring>
        </property>
       </widget>
      </item>
      <item row="4" column="5">
       <widget class="QComboBox" name="_comboPointDensity">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="toolTip">
         <string>Point Type</string>
        </property>
        <property name="whatsThis">
         <string>If &quot;Show Points&quot; is checked, the selected point type will be drawn at each data point.</string>
        </property>
        <item>
         <property name="text">
          <string>All</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>High</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Medium</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Low</string>
         </property>
        </item>
       </widget>
      </item>
      <item row="7" column="2">
       <widget class="QLabel" name="_textLabelHeadStyle">
        <property name="text">
         <string>&amp;Type:</string>
        </property>
        <property name="buddy">
         <cstring>_comboHeadSymbol</cstring>
        </property>
        <property name="si" stdset="0">
         <string>head type</string>
        </property>
       </widget>
      </item>
      <item row="7" column="3">
       <widget class="QComboBox" name="_comboHeadSymbol"/>
      </item>
      <item row="7" column="4">
       <widget class="Kst::ColorButton" name="_headColor">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="si" stdset="0">
         <string>curve head color</string>
        </property>
       </widget>
      </item>
      <item row="8" column="0" colspan="2">
       <widget class="QCheckBox" name="_showBars">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="whatsThis">
         <string>Check this to cause lines to be drawn between data points.</string>
        </property>
        <property name="text">
         <string>&amp;Bargraph</string>
        </property>
        <property name="checked">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="8" column="2">
       <widget class="QLabel" name="_textLabelBarStyle">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>Fill:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="8" column="3">
       <widget class="Kst::ColorButton" name="_barFillColor">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="si" stdset="0">
         <string>curve bar fill</string>
        </property>
       </widget>
      </item>
      <item row="1" column="4">
       <widget class="QLabel" name="_textLabelWeight">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>&amp;Weight:</string>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
        <property name="buddy">
         <cstring>_spinBoxLineWidth</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="3">
       <widget class="QComboBox" name="_comboLineStyle">
        <property name="toolTip">
         <string>Line Type</string>
        </property>
        <property name="whatsThis">
         <string>If &quot;Show Lines&quot; is checked, the selected line style.</string>
        </property>
        <property name="si" stdset="0">
         <string>line style</string>
        </property>
       </widget>
      </item>
      <item row="1" column="2">
       <widget class="Kst::ColorButton" name="_color">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="si" stdset="0">
         <string>curve color</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>Kst::ColorButton</class>
   <extends>QToolButton</extends>
   <header>colorbutton.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>_showLines</tabstop>
  <tabstop>_color</tabstop>
  <tabstop>_comboLineStyle</tabstop>
  <tabstop>_spinBoxLineWidth</tabstop>
  <tabstop>_showPoints</tabstop>
  <tabstop>_comboPointSymbol</tabstop>
  <tabstop>_comboPointDensity</tabstop>
  <tabstop>_showHead</tabstop>
  <tabstop>_comboHeadSymbol</tabstop>
  <tabstop>_headColor</tabstop>
  <tabstop>_showBars</tabstop>
  <tabstop>_barFillColor</tabstop>
 </tabstops>
 <includes>
  <include location="global">kst_export.h</include>
 </includes>
 <resources/>
 <connections/>
</ui>
